# Steca

./: .appveyor.yml  .docs  .docs_toc  .gitignore  .gitmodules  .make_docs.old.php  .make_docs.php  .make_docs.sh  .make_pro.sh  .travis.yml  .vscode.sh  .wc.sh  .wc_ours.sh  AUTHORS  CHANGELOG  CMakeLists.txt  COPYING  Doxyfile  README.md  TODO  TODO.txt  VERSION  _index.cm  about.cm  cmake.inc  cmake.options  doc.md  make_pro.sh  manifest  nav.md
STeCa/: .make_pro.sh  CMakeLists.txt  doc.md  main.cpp  make_pro.sh
STeCa/core/: CMakeLists.txt  doc.md  session.cpp  session.h  session.hpp
STeCa/core/data/: data.cpp  data.hpp  doc.md  image.cpp  image.hpp
STeCa/core/fit/: fit_fun.cpp  fit_fun.hpp  fit_methods.cpp  fit_methods.hpp
STeCa/core/io/: doc.md  io.h  io.hpp  io_caress.cpp  io_caress.old.txt  io_caress_data.cpp  io_caress_data.hpp
STeCa/core/typ/: angles.cpp  angles.hpp  arr.cpp  arr.hpp  curve.cpp  curve.hpp  def.hpp  doc.md  factory.hpp  fry.hpp  fun.cpp  fun.hpp  geometry.cpp  geometry.hpp  ij.cpp  ij.h  image.cpp  image.hpp  mat.cpp  mat.h  mat.hpp  range.cpp  range.h  range.hpp  xy.cpp  xy.h
STeCa/core_qt/: CMakeLists.txt  doc.md  json.cpp  json.h  json.hpp  models.cpp  models.hpp
STeCa/core_qt/io/: io.cpp  io.hpp  io_caress.cpp  io_caress_data.cpp  io_mar.cpp  io_tiff.cpp
STeCa/gui/: CMakeLists.txt  acts.cpp  acts.hpp  app.cpp  app.hpp  doc.md  hub.cpp  hub.hpp  rc.qrc  win.cpp  win.hpp
STeCa/gui/app/: app.cpp  app.h  doc.md  win.cpp  win.h
STeCa/gui/hub/: acts.cpp  acts.h  doc.md  hub.cpp  hub.h  hub.hpp
STeCa/gui/panel/: panel.cpp  panel.hpp  panel_datasets.cpp  panel_datasets.hpp  panel_diffractogram.cpp  panel_diffractogram.hpp  panel_files.cpp  panel_files.hpp  panel_image.cpp  panel_image.hpp  panel_metadata.cpp  panel_metadata.hpp  panel_setup.cpp  panel_setup.hpp
dev_lib/: CMakeLists.txt  defs.cpp  defs.hpp  defs.inc  str.cpp  str.hpp
dev_lib/inc/: defs.hpp  defs.inc  defs_cpp.h  defs_h.cpp  defs_h.h  exc.cpp  exc.h  exc.hpp  flt.cpp  flt.hpp  nav.md  num.cpp  num.h  num.hpp  ptr.cpp  ptr.h  ptr.hpp  str.hpp  str_fmt.cpp  str_fmt.h  str_fmt.hpp  vecs.hpp
dev_lib/io/: endian.cpp  endian.hpp  fin.cpp  fin.hpp  fio.cpp  fio.hpp  json.cpp  json.hpp  log.cpp  log.hpp  path.cpp  path.hpp
dev_lib/test/: doctest.h  nav.md  test.h  test.hpp  test.inc  tests_main.cpp
dev_lib/typ/: arr2.cpp  arr2.h  arr2.hpp  buf.cpp  buf.hpp  cache.cpp  cache.h  cache.hpp  factory.hpp  hash.h  hash.hpp  ij.cpp  ij.h  ij.hpp  map.h  map.hpp  path.cpp  path.h  path.hpp  sz2.cpp  sz2.h  sz2.hpp  thread.cpp  thread.h  thread.hpp  trg.cpp  trg.h  trg.hpp  vec.cpp  vec.h  vec.hpp  xy.cpp  xy.h  xy.hpp
gui/: CMakeLists.txt  gui.cpp
gui/app/: app.cpp  app.h  win.cpp  win.h
gui/hub/: hub.cpp  hub.h
gui/qt/: app.h  win.cpp
gui/view/: toggles.cpp
lib/qt/: .make_pro.sh  CMakeLists.txt  README.md  _index.cm  act.cpp  act.hpp  app.cpp  app.hpp  btn.cpp  btn.hpp  cbo.cpp  chk.cpp  chk.hpp  defs.hpp  defs.inc  dlg_about.cpp  dlg_about.hpp  dlg_file.cpp  dlg_file.hpp  dlg_msg.cpp  edit.cpp  edit.hpp  font.cpp  font.hpp  hub.cpp  hub.hpp  ico.cpp  layout.cpp  layout.hpp  lbl.cpp  lbl.hpp  lst.cpp  lst.hpp  model.cpp  model.hpp  nav.md  qstr.cpp  qstr.inc  rio.cpp  settings.cpp  (+15 more)
lib/qt/app/: README.md  act.cpp  act.hpp  app.cpp  app.hpp  hub.cpp  hub.hpp  settings.cpp  settings.hpp  tim.cpp  tim.hpp  var.cpp  var.hpp
lib/qt/dlg/: README.md  dlg_about.cpp  dlg_about.hpp  dlg_file.cpp  dlg_file.hpp  dlg_msg.cpp  dlg_msg.hpp
lib/qt/inc/: qstr.cpp
lib/qt/view/: README.md  lst.cpp  lst.hpp  table.cpp  table.hpp
lib/qt/wgt/: README.md  btn.cpp  btn.hpp  cbo.cpp  cbo.hpp  chk.cpp  chk.hpp  edit.cpp  edit.hpp  font.cpp  font.hpp  ico.cpp  ico.hpp  lbl.cpp  lbl.hpp  rio.cpp  rio.hpp  spin.cpp  spin.hpp
lib/qt/win/: README.md  layout.cpp  layout.hpp  split.cpp  split.hpp  tabs.cpp  tabs.hpp  win.cpp  win.hpp
qt/: CMakeLists.txt  app.cpp  app.h  log.cpp  log.h  win.cpp  win.h
qt_lib/: .make_pro.sh  CMakeLists.txt  act.cpp  act.h  act.hpp  app.cpp  app.h  app.hpp  btn.cpp  btn.h  btn.hpp  cache.cpp  cache.h  cbo.cpp  cbo.h  cbo.hpp  chk.cpp  chk.h  chk.hpp  dlg_about.cpp  dlg_about.hpp  dlg_file.cpp  dlg_file.h  dlg_file.hpp  dlg_msg.cpp  dlg_msg.h  dlg_msg.hpp  edit.cpp  edit.h  edit.hpp  font.cpp  font.hpp  gui_inc.h  hub.cpp  hub.hpp  layout.cpp  layout.h  layout.hpp  lbl.cpp  lbl.h  (+39 more)
qt_lib/inc/: defs.inc
src/: .make_docs.php  .make_pro.sh  CMakeLists.txt  README.md  _index.cm  doc.md  main.cpp  manifest.cpp
src/core/: README.md  doc.md  session.cpp  session.hpp  types.hpp
src/core/calc/: README.md  fit_params.cpp  fit_params.hpp  interpolation.cpp  interpolation.hpp  lens.cpp  lens.hpp  polefigure.cpp  polefigure.hpp  reflection.cpp  reflection.hpp  reflection_info.cpp  reflection_info.hpp
src/core/data/: README.md  data.cpp  data.hpp  files.cpp  files.hpp  fit.cpp  fit.hpp  sets.cpp  sets.hpp
src/core/fit/: README.md  fit_fun.cpp  fit_fun.hpp  fit_methods.cpp  fit_methods.hpp
src/core/io/: README.md  io.cpp  io.hpp  io_caress.cpp  io_caress_data.cpp  io_caress_data.hpp  io_mar.cpp  io_tiff.cpp  io_tiff.hpp  json.cpp  json.hpp
src/core_legacy/: README.md
src/gui/: CMakeLists.txt  README.md  acts.cpp  acts.hpp  app.cpp  app.hpp  models.cpp  models.hpp  options.cpp  options.hpp  rc.qrc  refhub.hpp  settings.cpp  settings.hpp  thehub.cpp  thehub.hpp  win.cpp  win.hpp
steca/: .make_pro.sh  CMakeLists.txt  _index.cm  main.cpp  manifest.h
steca/core/: CMakeLists.txt  json.cpp  json.h  json.hpp  session.cpp  session.h  session.hpp
steca/core_legacy/: CMakeLists.txt
steca/gui/: CMakeLists.txt  acts.cpp  acts.h  acts.hpp  app.cpp  app.h  app.hpp  doc.md  hub.cpp  hub.h  hub.hpp  hubaccess.hpp  models.cpp  models.h  models.hpp  rc.qrc  refhub.hpp  settings.cpp  settings.hpp  thehub.cpp  thehub.hpp  win.cpp  win.h  win.hpp
tests/: CMakeLists.txt  doc.md  test_io.cpp  tests_main.cpp
tests/lib/: CMakeLists.txt
tests/steca/: CMakeLists.txt  doc.md  testdata.tifdat
tests_lib/: CMakeLists.txt
tests_steca/: CMakeLists.txt  testdata.mar1600
(+572 files in other folders)
